まとめて詳細

--- a/test/kojin/index.html
+++ b/test/kojin/index.html
@@ -72,11 +72,13 @@
         
         <div class="clearfix" style="margin: 10px 0;">
             <a href="emp-form.html" class="btn btn-success pull-right"><span class="glyphicon glyphicon-plus"></span>新規</a>
+            <a id="empsDetailBtn" class="btn btn-success pull-left" disabled><span class="glyphicon glyphicon-user"></span>まとめて詳細</a>
         </div>
         
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th></th>
                     <th></th>
                     <th>社員番号</th>
                     <th>氏名(漢字)</th>
