まとめて詳細の実装

--- a/test/kojin/emps-detail.html
+++ b/test/kojin/emps-detail.html
@@ -168,7 +168,7 @@
                             </tbody>
                         </table>
                         <div class="clear-fix" style="margin: 10px 0;">
-                            <button class="btn btn-sm btn-danger pull-right" onclick="destroy();">
+                            <button class="btn btn-sm btn-danger pull-right emp-remove-btn">
                                 <span class="glyphicon glyphicon-trash"></span>
                                 削除
                             </button>
