追加ボタンの実装

--- a/test/kojin/emps-detail.html
+++ b/test/kojin/emps-detail.html
@@ -176,7 +176,7 @@
                     </div>
                     <div class="tab-pane" id="addr">
                         <div class="clear-fix" style="margin: 10px 0;">
-                            <a id="ins-addr" class="btn btn-sm btn-success pull-right">
+                            <a id="ins-addr" class="btn btn-sm btn-success pull-right addr-adding-btn">
                                 <span class="glyphicon glyphicon-plus"></span>
                                 追加</a>
                         </div>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="tab-pane" id="family">
                         <div class="clear-fix" style="margin: 10px 0;">
-                            <a id="ins-family" class="btn btn-sm btn-success pull-right">
+                            <a id="ins-family" class="btn btn-sm btn-success pull-right family-adding-btn">
                                 <span class="glyphicon glyphicon-plus"></span>
                                 追加</a>
                         </div>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="tab-pane" id="education">
                         <div class="clear-fix" style="margin: 10px 0;">
-                            <a id="ins-edu" class="btn btn-sm btn-success pull-right">
+                            <a id="ins-edu" class="btn btn-sm btn-success pull-right edu-adding-btn">
                                 <span class="glyphicon glyphicon-plus"></span>
                                 追加</a>
                         </div>
