フリーワード検索の実装

--- a/test/kojin/index.html
+++ b/test/kojin/index.html
@@ -67,6 +67,12 @@
             <button type="submit" class="btn btn-primary">
                 <span class="glyphicon glyphicon-search"></span>検索
             </button>
+            <div class="form-group">
+                <input name="q3" type="text" class="form-control" placeholder="フリーワード検索">
+            </div>
+            <button type="submit" class="btn btn-primary">
+                <span class="glyphicon glyphicon-search"></span>検索
+            </button>
         </form>
         <hr>
         
