DnD処理の追加

--- a/test/kojin/index.html
+++ b/test/kojin/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <meta http-equiv="Content-Script-Type" content="text/javascript">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta name="viewport" content="width=device-width">
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="lib/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/alasql.min.js"></script>
     <script src="lib/purl.js"></script>
     <script src="js/db.js"></script>
-    <meta charset="utf-8">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta name="viewport" content="width=device-width">
     <title>COMPANY</title>
 </head>
 <body>
@@ -48,6 +44,9 @@
                             </li>
                             <li>
                                 <a onclick="DB.remove();"><span class="glyphicon glyphicon-trash"></span>DB削除</a>
+                            </li>
+                            <li>
+                                <a href="moving-department.html"><span class="glyphicon glyphicon-random"></span>部署異動</a>
                             </li>
                         </ul>
                     </li>
