--- a/test/kojin/moving-department.html
+++ b/test/kojin/moving-department.html
@@ -31,6 +31,11 @@
             margin-left: -50px;
         }
 
+        .small-emp-img {
+            width: 50px;
+            height: 50px;
+        }
+
     </style>
 </head>
 <body>
