add department info in emp.html

--- a/test/kojin/emp.html
+++ b/test/kojin/emp.html
@@ -104,6 +104,11 @@
                         <span class="glyphicon glyphicon-education"></span>学歴
                     </a>
                 </li>
+                <li>
+                    <a href="#department" data-toggle="tab">
+                        <span class="glyphicon glyphicon-briefcase"></span>部署
+                    </a>
+                </li>
             </ul>
             <!-- tab panels -->
             <div class="tab-content">
@@ -232,6 +237,21 @@
                             </tr>
                         </thead>
                         <tbody id="tbody-edu"></tbody>
+                    </table>
+                </div>
+                <div class="tab-pane" id="department">
+                    <div class="clear-fix" style="margin: 10px 0;">
+                        <a href="moving-department.html" class="btn btn-sm btn-success pull-right">
+                            <span class="glyphicon glyphicon-plus"></span>
+                            変更</a>
+                    </div>
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>部署名</th>
+                        </tr>
+                        </thead>
+                        <tbody id="tbody-dept"></tbody>
                     </table>
                 </div>
             </div>
