departmentのDBわけ処理

--- a/test/kojin/emp.html
+++ b/test/kojin/emp.html
@@ -240,6 +240,11 @@
                     </table>
                 </div>
                 <div class="tab-pane" id="department">
+                    <div class="clear-fix" style="margin: 10px 0;">
+                        <a id="ins-dept" class="btn btn-sm btn-success pull-right">
+                            <span class="glyphicon glyphicon-plus"></span>
+                            追加</a>
+                    </div>
                     <table class="table table-striped">
                         <thead>
                         <tr>
