--- a/test/kojin/index.html
+++ b/test/kojin/index.html
@@ -55,6 +55,12 @@
     <div class="container">
         <form action="index.html" class="for-m-inline text-center">
             <div class="form-group">
+                <input name="q0" type="text" class="form-control" placeholder="フリーワード検索" list="andor-suggest">
+                <datalist id="andor-suggest">
+
+                </datalist>
+            </div>
+            <div class="form-group">
                 <input name="q1" type="text" class="form-control" placeholder="フリーワード検索(and)" list="and-suggest">
                 <datalist id="and-suggest">
                   
