--- a/test/kojin/index.html
+++ b/test/kojin/index.html
@@ -123,5 +123,6 @@
         </table>
     </div>
     <script src="js/index.js"></script>
+    <script src="js/notification.js"></script>
 </body>
 </html>
