--- a/test/kojin/index.html
+++ b/test/kojin/index.html
@@ -56,7 +56,7 @@
         <form action="index.html" class="for-m-inline text-center">
             <select name="t">
                 <option value="emp">身上</option>
-                <option value="address">住所</option>
+                <option value="addr">住所</option>
                 <option value="family">家族</option>
                 <option value="edu">学歴</option>
                 <option value="dept">部署</option>
