出荷対応日数と自動出荷機能の実装

--- a/test/zaiko/index.html
+++ b/test/zaiko/index.html
@@ -92,6 +92,9 @@
                     <th>金額</th>
                     <th>残量</th>
                     <th>単位</th>
+                    <th>平均出荷数</th>
+                    <th>出荷対応日数</th>
+                    <th>リードタイム日数</th>
                 </tr>
             </thead>
             <tbody id="tbody-stocks"></tbody>
