--- a/test/zaiko/stock-form.html
+++ b/test/zaiko/stock-form.html
@@ -92,5 +92,6 @@
         </div>
     </div>
     <script src="js/stock-form.js"></script>
+    <script src="js/common.js"></script>
 </body>
 </html>
