--- a/test/zaiko/stock.html
+++ b/test/zaiko/stock.html
@@ -126,5 +126,6 @@
         </table>
     </div>
     <script src="js/stock.js"></script>
+    <script src="js/common.js"></script>
 </body>
 </html>
