ABC分析対応 & Dグループ振り分け & 各グループ別の発注方法提案機能の実装

--- a/test/zaiko/index.html
+++ b/test/zaiko/index.html
@@ -90,6 +90,7 @@
         
         <div class="clearfix" style="margin: 10px 0;">
             <a href="stock-form.html" class="btn btn-success pull-right"><span class="glyphicon glyphicon-plus"></span>新規</a>
+            <a href="analysis.html" class="btn btn-success pull-left"><span class="glyphicon glyphicon-plus"></span>ABC分析</a>
         </div>
         
         <table class="table table-striped">
