売り上げ0の時のバグ修正

--- a/test/zaiko/analysis.html
+++ b/test/zaiko/analysis.html
@@ -42,6 +42,12 @@
                 <li class="active">
                     <a href="index.html">在庫管理</a>
                 </li>
+                <li class="active">
+                    <a href="index2.html">受注・出荷管理</a>
+                </li>
+                <li class="active">
+                    <a href="index3.html">発注・入荷管理</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -75,6 +81,7 @@
             <th>売上累計</th>
             <th>構成比</th>
             <th>累積構成比</th>
+            <th>グループ</th>
             <th>提案</th>
         </tr>
         </thead>
