--- a/test/zaiko/index2.html
+++ b/test/zaiko/index2.html
@@ -56,45 +56,25 @@
     </nav>
     
     <div class="container">
-        <!-- Bread crumbs -->
-        <ol class="breadcrumb">
-            <li>
-                <a href="index.html">在庫一覧</a>
-            </li>
-            <li class="active">
-                <span>新規</span>
-            </li>
-        </ol>
-        
-        <!-- Abstract -->
-        <div class="form">
-            <input type="hidden" name="id">
-            <div class="form-group">
-                <label>倉庫</label>
-                <select class="form-control" name="whouse"></select>
-            </div>
-            <div class="form-group">
-                <label>商品</label>
-                <select class="form-control" name="item"></select>
-            </div>
-            <div class="form-group">
-                <label>日付</label>
-                <input type="date" class="form-control" name="date">
-            </div>
-            <div class="form-group">
-                <label>数量</label>
-                <input type="number" class="form-control" name="qty" value="0" placeholder="出庫はマイナス、入庫はプラス">
-            </div>
-            <div class="form-group">
-                <label>コメント</label>
-                <textarea type="text" class="form-control" name="memo" placeholder="必ずコメントを入れてください"></textarea>
-            </div>
-            <button type="submit" class="btn btn-success" id="update">
-                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>保存
-            </button>
+        <div class="clearfix" style="margin: 10px 0;">
+            <a href="inventory-allocation.html" class="btn btn-success pull-left"><span class="glyphicon glyphicon-plus"></span>在庫引き当て</a>
         </div>
+        <h1>見積もり依頼一覧</h1>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>依頼元</th>
+                    <th>商品名</th>
+                    <th>個数</th>
+                    <th>倉庫</th>
+                    <th>ステータス</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="tbody-reqs"></tbody>
+        </table>
     </div>
-    <script src="js/stock-form.js"></script>
+    <script src="js/index2.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
