--- a/test/zaiko/index.html
+++ b/test/zaiko/index.html
@@ -42,6 +42,9 @@
                     <li class="active">
                         <a href="index.html">在庫管理</a>
                     </li>
+                    <li class="active">
+                        <a href="index2.html">受注・出荷管理</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
