在庫引当機能の追加と、出荷予定日の算出、および自動出荷機能(予定日に出荷する処理)を実装

--- a/test/zaiko/estimate.html
+++ b/test/zaiko/estimate.html
@@ -67,7 +67,7 @@
                 <th>コード</th>
                 <th>メーカー</th>
                 <th>詳細</th>
-                <th>納期</th>
+                <th>予定出荷日</th>
                 <th>価格</th>
                 <th>個数</th>
             </tr>
