--- a/test/zaiko/index2.html
+++ b/test/zaiko/index2.html
@@ -68,6 +68,7 @@
                     <th>個数</th>
                     <th>倉庫</th>
                     <th>ステータス</th>
+                    <th>納品予定日</th>
                     <th></th>
                 </tr>
             </thead>
