検品と返品処理の実装

--- a/test/zaiko/index2.html
+++ b/test/zaiko/index2.html
@@ -34,6 +34,9 @@
                     <li class="active">
                         <a href="index2.html">受注・出荷管理</a>
                     </li>
+                    <li class="active">
+                        <a href="index3.html">入庫管理</a >
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -56,9 +59,6 @@
     </nav>
     
     <div class="container">
-        <div class="clearfix" style="margin: 10px 0;">
-            <a href="inventory-allocation.html" class="btn btn-success pull-left"><span class="glyphicon glyphicon-plus"></span>在庫引き当て</a>
-        </div>
         <h1>見積もり依頼一覧</h1>
         <table class="table table-striped">
             <thead>
