--- a/test/zaiko/stock-form.html
+++ b/test/zaiko/stock-form.html
@@ -34,6 +34,9 @@
                     <li class="active">
                         <a href="index2.html">受注・出荷管理</a>
                     </li>
+                    <li class="active">
+                        <a href="index3.html">入庫管理</a >
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
