--- a/test/zaiko/index3.html
+++ b/test/zaiko/index3.html
@@ -25,7 +25,7 @@
                 </button>
                 <a class="navbar-brand">COMPANY</a>
             </div>
-
+            
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
@@ -57,81 +57,25 @@
             </div>
         </div>
     </nav>
-
+    
     <div class="container">
-        <!-- Bread crumbs -->
-        <ol class="breadcrumb">
-            <li>
-                <a href="index.html">在庫一覧</a>
-            </li>
-            <li class="active">
-                <span>詳細</span>
-            </li>
-        </ol>
-
-        <!-- Abstract -->
-        <table class="table">
-            <tbody>
-                <tr>
-                    <th>倉庫</th><td id="whouse"></td>
-                </tr>
-                <tr>
-                    <th>コード</th><td id="code"></td>
-                </tr>
-                <tr>
-                    <th>メーカー</th><td id="maker"></td>
-                </tr>
-                <tr>
-                    <th>詳細</th><td id="detail"></td>
-                </tr>
-                <tr>
-                    <th>価格</th><td id="price"></td>
-                </tr>
-                <tr>
-                    <th>残量</th><td id="balance"></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="panel panel-default" style="margin-top: 20px;">
-            <div class="panel-heading">
-                <span class="glyphicon glyphicon-pencil"></span>入庫・出庫
-            </div>
-            <div class="form-body">
-                <div class="form">
-                    <input type="hidden" name="id">
-                    <div class="form-group">
-                        <label>日付</label>
-                        <input type="date" class="form-control" name="date">
-                    </div>
-                    <div class="form-group">
-                        <label>数量</label>
-                        <input type="number" class="form-control" name="qty" value="0" placeholder="出庫はマイナス、入庫はプラス">
-                    </div>
-                    <div class="form-group">
-                        <label>コメント</label>
-                        <textarea type="text" class="form-control" name="memo" placeholder="必ずコメントを入れてください"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-success" id="update">
-                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>変更
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <h4>変更履歴</h4>
-        <table class="table">
+        <h1>入庫商品 検品リスト</h1>
+        <p>仕入先から入荷した商品に対して、不良品の返品が可能です</p>
+        <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>日付</th>
-                    <th>数量</th>
-                    <th>残量</th>
-                    <th>コメント</th>
+                    <th>仕入先</th>
+                    <th>商品名</th>
+                    <th>個数</th>
+                    <th>返品数</th>
+                    <th></th>
+                    <th>備考</th>
                 </tr>
             </thead>
-            <tbody id="tbody-transs"></tbody>
+            <tbody id="tbody-kenpins"></tbody>
         </table>
     </div>
-    <script src="js/stock.js"></script>
+    <script src="js/index3.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
