入荷・発注処理の実装

--- a/test/zaiko/analysis.html
+++ b/test/zaiko/analysis.html
@@ -48,6 +48,9 @@
                 <li class="active">
                     <a href="index3.html">入庫管理</a >
                 </li>
+                <li class="active">
+                    <a href="index4.html">発注管理</a >
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
