--- a/test/zaiko/index4.html
+++ b/test/zaiko/index4.html
@@ -62,27 +62,38 @@
     </nav>
     
     <div class="container">
-        <h1>入庫残管理</h1>
-        <p>仕入先に返品したtrans情報を元に再入荷を管理します</p>
-        <p>1 ~ 返品した数まで再発注かけることができます。</p>
-        <p>「再発注」をかけたtransはstatus=0に更新され、再発注の対象外となりますので、お気をつけください。</p>
+        <h1>発注管理</h1>
+        <p>選択したアイテムと個数で仕入先に発注書を作成します</p>
+        <p>入荷日は本来は依頼先会社が在庫を加味して算出するため、本システムだけでは算出不可能。そのため、想定で入稿します。</p>
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>仕入先</th>
-                    <th>商品名</th>
-                    <th>現在在庫数</th>
-                    <th>入荷指示数</th>
-                    <th>返品数</th>
-                    <th>実質入荷数</th>
-                    <th>再発注数</th>
-                    <th></th>
+                    <th>商品</th>
+                    <th>個数</th>
+                    <th>入荷日</th>
+                    <th>備考</th>
                 </tr>
             </thead>
-            <tbody id="tbody-items"></tbody>
+            <tbody id="tbody-input"></tbody>
+        </table>
+        <h2>発注書管理</h2>
+        <p>作成した発注書一覧を表示します</p>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>仕入先</th>
+                    <th>商品</th>
+                    <th>個数</th>
+                    <th>入荷日</th>
+                    <th>備考</th>
+                    <th>ステータス</th>
+                </tr>
+            </thead>
+            <tbody id="tbody-orders"></tbody>
         </table>
     </div>
-    <script src="js/returnAdmin.js"></script>
+    <script src="js/index4.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
