--- a/test/zaiko/estimate.html
+++ b/test/zaiko/estimate.html
@@ -38,6 +38,9 @@
                 <li class="active">
                     <a href="index3.html">入庫管理</a >
                 </li>
+                <li class="active">
+                    <a href="index4.html">発注管理</a >
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
