在庫管理機能から自動発注処理とABC分析を分離し、common処理に移行

--- a/test/zaiko/index4.html
+++ b/test/zaiko/index4.html
@@ -65,6 +65,9 @@
         <h1>発注管理</h1>
         <p>選択したアイテムと個数で仕入先に発注書を作成します</p>
         <p>入荷日は本来は依頼先会社が在庫を加味して算出するため、本システムだけでは算出不可能。そのため、想定で入稿します。</p>
+        <div class="clearfix" style="margin: 10px 0;">
+            <a href="analysis.html" class="btn btn-success pull-left"><span class="glyphicon glyphicon-plus"></span>ABC分析</a>
+        </div>
         <table class="table table-striped">
             <thead>
                 <tr>
